# Molecular-Modeler

./: README.md
backend/md_analysis/constants/: radii_lists.cpp
backend/md_analysis/cpp_core/: CMakeLists.txt  pybind11_module.cpp  radii_lists.h  setup.py
backend/md_analysis/cpp_core/core_energies/: bonded_interactions.cpp  bonded_interactions.h  nonbond_interactions.cpp  nonbond_interactions.h
backend/md_analysis/cpp_core/core_energies/forces_classical/: bonded_forces.h  nonbonded_forces.h
backend/md_analysis/cpp_core/core_energies/resources/: generate_exclusions.h
backend/molecules/: geometry_logic.py  molecule_assembly.py
frontend_GUI/: main.py
